descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 202X-XX-XX  Release 7.3X.X                                     ---
----------------------------------------------------------------------

* added self-intersecting torus ray tracing support - Sean Morrison
* fixed rt crash rendering to -F/dev/null - Sean Morrison
* fix double printing of last 'search -exec' result - Chris McGregor
* improve 'search -v' to support multiple levels - Chris McGregor
* update 'search -v' to report # of objects found - Chris McGregor
* fixed asc2g/g2asc support for brep primitives - Cliff Yapp
* fixed dsp terrain file data loading for relative paths - Cliff Yapp


----------------------------------------------------------------------
--- 2023-11-06  Release 7.38.0                                     ---
----------------------------------------------------------------------
This major release of BRL-CAD introduces significant improvements to
the robustness of the facetize command by leveraging the Manifold
library for boolean evaluation of meshes. Facetization is an operation
that converts boolean CSG hierarchies to evaluated triangle meshes,
commonly used as a preliminary step in geometry export.  As an
example, the following results show before-and-after differences when
processing high level assemblies in BRL-CAD's example geometry files:

% success, old: 88.9%  (249 of 280) Time elapsed:  7256 seconds
% success, new: 98.9%  (277 of 280) Time elapsed:  1044 seconds

* add 'brep dump' subcommand to write out brep objects - Cliff Yapp
* improve 'x' default behavior in MGED - Chris McGregor
* fixed 'edcolor' and 'color -e' on Windows - Chris McGregor
* ported fbcolor, fblabel, fbpoint, fbzoom to Windows - Sean Morrison
* new 'gist' tool for generating 1-page geometry info summary reports
	- Allyson Hoskinson, Andrew Plant, Mark Sturtevant,